update openapi spec and generated code
